appId: com.diegoalvis.travelapp
tags:
  - android
  - passing
---

- launchApp:
    clearState: true
- assertVisible: "Are you ready to explore the world?"
- tapOn: "Tokyo"
- assertVisible: "Tokyo is a bustling metropolis.*"
- assertVisible: "Tokyo Tower"
- scrollUntilVisible:
    element:
      text: "sushi"
    visibilityPercentage: 100


